--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="input-box">
                <label asp-for="User_Emp_Id" class="details">Emp-Id</label>
-                <input asp-for="User_Emp_Id"placeholder="Enter your Emp_Id" class="form-control"/>
+                <input asp-for="User_Emp_Id"placeholder="Enter your Employee Id" class="form-control"/>
                 <span asp-validation-for="User_Emp_Id" class="text-danger"></span>
 
             </div>
