--- a/Views/User/VerifyMsg.cshtml
+++ b/Views/User/VerifyMsg.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "VerifyMsg";
 }
-<h1>Welcome @TempData["User_Name"]</h1>
+<h1>Welcome @TempData["Registered Successfullly"]</h1>
 <h1>Thank you for Registration</h1>
 <h2>Your Account will be verified</h2>
 
