--- a/Views/ProjectDetails/Dashboard.cshtml
+++ b/Views/ProjectDetails/Dashboard.cshtml
@@ -1,10 +1,30 @@
-﻿@model ProjectDetails
-@{
-    ViewData["Title"] = "Dashboard";
-}
+﻿<section>
+  <header class="bg-white space-y-4 p-4 sm:px-8 sm:py-6 lg:p-4 xl:px-8 xl:py-6">
+    <div class="flex items-center justify-between">
+      <h2 class="font-semibold text-slate-900">Projects</h2>
+      <a href="/new" class="hover:bg-blue-400 group flex items-center rounded-md bg-blue-500 text-white text-sm font-medium pl-2 pr-3 py-2 shadow-sm">
+        <svg width="20" height="20" fill="currentColor" class="mr-2" aria-hidden="true">
+          <path d="M10 5a1 1 0 0 1 1 1v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3H6a1 1 0 1 1 0-2h3V6a1 1 0 0 1 1-1Z" />
+        </svg>
+        New
+      </a>
+    </div>
+    <form class="group relative">
+      <svg width="20" height="20" fill="currentColor" class="absolute left-3 top-1/2 -mt-2.5 text-slate-400 pointer-events-none group-focus-within:text-blue-500" aria-hidden="true">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" />
+      </svg>
+      <input class="focus:ring-2 focus:ring-blue-500 focus:outline-none appearance-none w-full text-sm leading-6 text-slate-900 placeholder-slate-400 rounded-md py-2 pl-10 ring-1 ring-slate-200 shadow-sm" type="text" aria-label="Filter projects" placeholder="Filter projects...">
+    </form>
+  </header>
+</section>
 
-<h1>Dashboard</h1>
 
+
+
+
+
+
+@*@using System.Security.Claims
 @{
     ViewData["Title"] = "Index";
     var objectprojectlist = ViewData["projectList"] as IEnumerable<ProjectDetails>;
@@ -25,8 +45,13 @@
     </div>
     <br /> <br />
     </div>
-<h1>Projects</h1>
-
+<h1>Projects</h1>*@
+@*@if (User.IsSignedIn()) { 
+            <div>@User.GetHashCode()</div> 
+            <form method = "post" asp-controller = "User" aspcontroller = "Logout"> 
+               <input type = "submit" value = "Logout"/> 
+            </form> *@
+@*}
 <table class="table table-bordered table-striped" style="width:100%":>
 
 <thead>
@@ -54,7 +79,7 @@
     </tr>
     </thead>
     <tbody>
-        @foreach (var obj in objectprojectlist)
+        @foreach (var obj in Model)
         {
             <tr>
                 <td width="50%">
@@ -81,19 +106,12 @@
 
                 </td>
      
-                      
-                <td>
-                 @*  <div class=w-75 btn-group" role="group">
-                        <a asp-action="Edit" asp-controller="category" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">Edit<i class="bi bi-pencil-square"></i></a>
-
-                    </div>
-                    <div class=w-75 btn-group" role="group">
-                        <a asp-action="Delete" asp-controller="category" asp-route-Id="@obj.Id" class="btn btn-danger mx-2">Delete<i class="bi bi-trash"></i></a>
-
-                    </div>*@
-              </td>
+       
             </tr>
             
         }
     </tbody>
    </table>
+
+*@
+
