--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -36,6 +36,7 @@
                <input asp-for="User_Password"placeholder="Enter your password" type="password" class="form-control"/>
                <span asp-validation-for="User_Password" class="text-danger"></span>
             </div>
+
          
             <div class="input-box">
                <label asp-for="User_Phone" class="details">Phone</label>
@@ -49,8 +50,10 @@
                 <span asp-validation-for="User_Emp_Id" class="text-danger"></span>
 
             </div>
+            
+
         
-             <button class="btn btn-primary"   type="submit" style="width:250px margin-top:50px;"> Register</button>
+             <button class="btn btn-primary"   type="submit" style="width:250px; margin-top:50px;"> Register</button>
           
            
       </div>
