--- a/Views/ProjectDetails/Dashboard.cshtml
+++ b/Views/ProjectDetails/Dashboard.cshtml
@@ -67,7 +67,7 @@
                 </div>
               </div>
               <div class="col-md-4">
-                <figure class="paint-image" style="background: url('') no-repeat center center / cover;">
+                <figure class="paint-image" style="background: url('') no-repeat center center cover;">
                   <h1></h1>
                 </figure>
               </div>
