--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,10 +10,11 @@
 <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
 <div class="text-center">
     <h1 class="display-4">Welcome To InterraIt</h1>
-    <p align="left">Learn about <a href="https://docs.microsoft.com/aspnet/core"></a>InterraIT has been a leader in the Information Technology Industry since its founding in 1996. The company is a Global Software Services organization that delivers innovative business and technology solutions to Fortune 1000 companies. Accredited as ISO 9001:2015 certified organization; it has also been listed as one of India’s Top 20 Best Employers by IDC-DQ Best Employers Survey.
-
+    <div style="margin-bottom: -80px; margin-top: -67px">
+    <p  align="center">Learn about <a href="https://docs.microsoft.com/aspnet/core"></a>InterraIT has been a leader in the Information Technology Industry since its founding in 1996. The company is a Global Software Services organization that delivers innovative business and technology solutions to Fortune 1000 companies. Accredited as ISO 9001:2015 certified organization; it has also been listed as one of India’s Top 20 Best Employers by IDC-DQ Best Employers Survey.
+    
 Headquartered in California, InterraIT’s operations are spread across 5 countries, with a sales network spanning the United States, Canada and India . The company has two state of the art development centers in India, which are the focal point in servicing its esteemed customer base across the globe.</p>
-
+    </div>
 
 
 
@@ -29,22 +30,22 @@ Headquartered in California, InterraIT’s operations are spread across 5 countr
     <div class="carousel-item active">
       <img src="~/css/slide1.PNG" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+@*        <h5>First slide label</h5>
+        <p>Some representative placeholder content for the first slide.</p>*@
       </div>
     </div>
     <div class="carousel-item">
       <img src="~/css/slide2.PNG" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+@*        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>*@
       </div>
     </div>
     <div class="carousel-item">
       <img src="~/css/slide3.PNG" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+@*        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>*@
       </div>
     </div>
   </div>
@@ -60,43 +61,57 @@ Headquartered in California, InterraIT’s operations are spread across 5 countr
 
 @*CARDS*@
 <div class="text-center">
-    <h1 class="display-4">we create digital footprints</h1>
+    <div style="margin-top:25px;">
+    <h1 class="display-4">We Create Digital Footprints</h1>
+    </div>
+    <div style="margin-top:25px;">
     <h3>Check out the latest tech talks & webinars</h3>
+    </div>
 </div>
-<div class="tab1cards">
-@*        <div class="text">
+<div style="margin-top:25px;" class="tab1cards">
+       @* <div class="text">
             <h1>we create digital footprints</h1>
         </div> *@
        
-        <div class="card mt-3 mx-auto" style="width: 18rem;">
+        <div class="card mt-3 mx-auto" style="width: 18rem;height: 70vh">
           <img src="~/css/card1.PNG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">AMS For Development, SCM, Monitoring & Reporting</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="https://www.interrait.com/sites/default/files/gbb-uploads/pdffiles/AMS_Case_study_AMS_for_Development,_SCM,_Monitoring_and_Reporting.pdf" class="btn btn-primary">Go somewhere</a>
-          </div>
+            </div>
+            <div style="";>
+            <p class="card-text">Case Study</p>
+            </div ">
+            <div style="margin-top: -84px;">
+            <a href="https://www.interrait.com/sites/default/files/gbb-uploads/pdffiles/AMS_Case_study_AMS_for_Development,_SCM,_Monitoring_and_Reporting.pdf" class="btn btn-primary">Click Here</a>
+            </div>
         </div>
 
-        <div class="card mt-3 mx-auto" style="width: 18rem;">
+        <div class="card mt-3 mx-auto" style="width: 18rem;height: 70vh">
           <img src="~/css/card2.PNG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Entrepreneur Or Small Business Owner: Which One Are You?</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="https://www.youtube.com/watch?v=fSmONMv-sbk&t=1366s" class="btn btn-primary">Go somewhere</a>
+            <p class="card-text"></p>
+            <a href="https://www.youtube.com/watch?v=fSmONMv-sbk&t=1366s" class="btn btn-primary">Click Here</a>
           </div>
         </div>
 
-        <div class="card mt-3 mx-auto" style="width: 18rem;">
+        <div class="card mt-3 mx-auto" style="width: 18rem;height: 70vh">
           <img src="~/css/card3.PNG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The AI - Driven Transformation Of Software Testing</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
-            <a href="https://www.youtube.com/watch?v=mRqWqJ4Ic8g" class="btn btn-primary">Go somewhere</a>
+            <p class="card-text"></p>
+            <a href="https://www.youtube.com/watch?v=mRqWqJ4Ic8g" class="btn btn-primary">Click Here</a>
           </div>
         </div>
 
 </div>
 
+<div>
+    
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</div>
+<script src="~/js/Dashboard.js"></script>
+    
 </body>
 
 
