--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,34 +8,77 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Document_Saver.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <nav id="na" class="navbar navbar-expand-sm bg-dark navbar-dark"mb-3">
+
+
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+          <div class="container-fluid">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="https://www.interrait.com/sites/default/files/logo_opt.png" />
+                </a>
+@*                <a class="navbar-brand" style="margin-right:60%" asp-area="" asp-controller="Home" asp-action="Index">
+                    Document Management System
+                </a*@
+                <a class="navbar-brand " style = "margin-left: 140px;" asp-area="" asp-controller="Home" asp-action="Index">
+                    <h4>Document Management System</h4>
+                </a>
+            <div class = "d-flex">
+                <a class="nav-link text-dark d-flex"  asp-area="" asp-controller="Home" asp-action="Index">
+                    <i class="bi bi-house-fill" style= "padding-right: 8px" alt="" width="30" height="24" class="d-inline-block align-text-top"></i>
+                    Home
+                </a>
+                 <a  class="nav-link text-dark d-flex" asp-area="" asp-controller="User" asp-action="Create">
+                  <i class="bi bi-person-fill" style= "padding-right: 8px" alt="" width="30" height="24" class="d-inline-block align-text-top"></i>
+                  Register
+                </a>
+                <a  class="nav-link text-dark d-flex" asp-area="" asp-controller="User" asp-action="Login">
+                  <i class="bi bi-box-arrow-in-right" style= "padding-right: 8px" alt="" width="30" height="24" class="d-inline-block align-text-top"></i>
+                  Login
+                </a>
+                <a class="nav-link text-dark d-flex" asp-area="" asp-controller="Home" asp-action="Support">
+                  <i class="bi bi-chat-dots-fill" style= "padding-right: 8px" alt="" width="30" height="24" class="d-inline-block align-text-top"></i>
+                  Support
+                </a>
+            </div>
+          </div>
+        </nav>
+@*        <nav id="na" class="navbar navbar-expand-sm bg-light navbar-light">
+        
+
             <div class="container-fluid">
-                <a class="navbar-brand" style="margin-right:50%" asp-area="" asp-controller="Home" asp-action="Index">Document_Saver</a>
+                <a class="navbar-brand" style="margin-right:60%" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="https://www.interrait.com/sites/default/files/logo_opt.png" />
+                </a>
+               
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                 
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            
+                            <a class="nav-link text-dark py-0" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house-fill"></i>Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="User" asp-action="Create">Registration</a>
+                            <a class="nav-link text-dark py-0" asp-area="" asp-controller="User" asp-action="Create"><i class="bi bi-person-fill"></i>Registration</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                            <a class="nav-link text-dark py-0" asp-area="" asp-controller="User" asp-action="Login"><i class="bi bi-box-arrow-in-right"></i>Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Support">Support</a>
+                            <a class="nav-link text-dark py-0" asp-area="" asp-controller="Home" asp-action="Support"><i class="bi bi-chat-dots-fill"></i>Support</a>
                         </li>
                     </ul>
+
                 </div>
+ 
             </div>
-        </nav>
+        </nav>*@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -45,12 +88,20 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-           @* &copy; 2022 - Document_Saver - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
+            &copy; 2022 - Document_Saver - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>&nbsp; &nbsp;
+             <a asp-area="" asp-controller="Home" asp-action="Support">Support</a>&nbsp; &nbsp;
+             <a asp-area="" asp-controller="User" asp-action="Create">Sign Up</a>&nbsp; &nbsp;
+             <a asp-area="" asp-controller="Home" asp-action="Login">Sign In</a>
+            
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+   
+    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
