--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,9 +14,10 @@ html {
 }
 
 body {
+    margin-top: 60px;
     margin-bottom: 60px;
-    background-color: rgb(250, 220, 220);
-    font-weight:bold;
+    //background-color: rgb(250, 220, 220);
+    font-weight: bold;
 }
 form .div{
     height:auto;
