--- a/Views/ProjectDetails/Dashboard.cshtml
+++ b/Views/ProjectDetails/Dashboard.cshtml
@@ -22,6 +22,9 @@
             <a href="#" class="notification"><i class="fa fa-bell" aria-hidden="true"></i></a>
 
           </div>
+          <form method="post" asp-controller="User" asp-action="Login">
+    <button class="btn btn-lg btn-primary btn-block">Logout</button>
+</form>
         </div>
         <button class="hamburger-icon">
           <span></span>
