worked on home page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
    
 <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
 <div class="text-center">
-    <h1 class="display-4">Welcome To InterraIt</h1>
+    <h1 class="display-4">Welcome to InterraIt</h1>
     <div style="margin-bottom: -80px; margin-top: -67px">
     <p  align="center">Learn about <a href="https://docs.microsoft.com/aspnet/core"></a>InterraIT has been a leader in the Information Technology Industry since its founding in 1996. The company is a Global Software Services organization that delivers innovative business and technology solutions to Fortune 1000 companies. Accredited as ISO 9001:2015 certified organization; it has also been listed as one of India’s Top 20 Best Employers by IDC-DQ Best Employers Survey.
     
@@ -73,37 +73,67 @@ Headquartered in California, InterraIT’s operations are spread across 5 countr
             <h1>we create digital footprints</h1>
         </div> *@
        
-        <div class="card mt-3 mx-auto" style="width: 18rem;height: 70vh">
-          <img src="~/css/card1.PNG" class="card-img-top" alt="...">
+        <div class="card mt-3 mx-auto" style=" right: -130px;width: 18rem;height: 70vh;">
+          <img src="https://www.interrait.com/sites/default/files/gbb-uploads/Home/homesection5/home_section5%20_block1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">AMS For Development, SCM, Monitoring & Reporting</h5>
             </div>
-            <div style="";>
-            <p class="card-text">Case Study</p>
-            </div ">
-            <div style="margin-top: -84px;">
-            <a href="https://www.interrait.com/sites/default/files/gbb-uploads/pdffiles/AMS_Case_study_AMS_for_Development,_SCM,_Monitoring_and_Reporting.pdf" class="btn btn-primary">Click Here</a>
+            <div style="margin-top: 20px; margin-bottom: 64px;">
+                <h6>CASE STUDY</H6>
+            </div "> 
+            <div>
+            <a href="https://www.interrait.com/sites/default/files/gbb-uploads/pdffiles/AMS_Case_study_AMS_for_Development,_SCM,_Monitoring_and_Reporting.pdf" class="btn btn-secondary">Download</a>
             </div>
         </div>
 
         <div class="card mt-3 mx-auto" style="width: 18rem;height: 70vh">
-          <img src="~/css/card2.PNG" class="card-img-top" alt="...">
+          <img src="https://www.interrait.com/sites/default/files/gbb-uploads/Home/homesection5/Technovate6_homepage.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Entrepreneur Or Small Business Owner: Which One Are You?</h5>
-            <p class="card-text"></p>
-            <a href="https://www.youtube.com/watch?v=fSmONMv-sbk&t=1366s" class="btn btn-primary">Click Here</a>
           </div>
+          <div style="margin-top: 20px; margin-bottom: 64px;">
+                <h6>TECHNOVATE</h6>
+          </div ">
+          <div>
+            <a href="https://www.youtube.com/watch?v=fSmONMv-sbk&t=1366s" class="btn btn-secondary">View Video</a>
+          </div>
+          
         </div>
 
-        <div class="card mt-3 mx-auto" style="width: 18rem;height: 70vh">
-          <img src="~/css/card3.PNG" class="card-img-top" alt="...">
+        <div class="card mt-3 mx-auto" style="left: -130px; width: 18rem;height: 70vh">
+          <img src="https://www.interrait.com/sites/default/files/gbb-uploads/Home/homesection5/The%20AI%20-%20Driven%20Transformation%20Of%20Software%20Testing.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The AI - Driven Transformation Of Software Testing</h5>
-            <p class="card-text"></p>
-            <a href="https://www.youtube.com/watch?v=mRqWqJ4Ic8g" class="btn btn-primary">Click Here</a>
           </div>
+          <div style="margin-top: 20px; margin-bottom: 64px;">
+                <h6>WEBINAR</h6>
+          </div ">
+          <div>
+            <a href="https://www.youtube.com/watch?v=mRqWqJ4Ic8g" class="btn btn-secondary">View Video</a>
+          </div>
+          
         </div>
 
+</div>
+<div class="text-center">
+    <h3 style="margin-top: 100px;">
+        THE ONE TREE,
+        <br />
+        ONE LIFE INITIATIVE
+    </h3>
+        <p style="margin-top: 25px;">This initiative by InterraIT is to ensure environmental sustainability and reduce the amount of CO2 from the environment.</p>
+    <h3 style="margin-top: -60px;">
+        PROMOTE FREE AND
+        <br />
+        QUALITY EDUCATION
+    </h3>
+        <p style="margin-top: 25px;">In order to promote free and quality education to the underprivileged, InterraIT seeks to provide education to improve the standard of living and livelihood.</p>
+    <h3 style="margin-top: -60px;">
+        AN INITIATIVE FOR
+        <br />
+        BETTER ENVIRONMENT
+    </h3>
+        <p style="margin-top: 25px;">An initiative by InterraIT to keep our environment clean and make it a better place to live in.</p>
 </div>
 
 <div>
