--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -95,13 +95,39 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer style="height: 10%; margin-bottom : -150px"class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Document_Saver - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>&nbsp; &nbsp;
-             <a asp-area="" asp-controller="Home" asp-action="Support">Support</a>&nbsp; &nbsp;
-             <a asp-area="" asp-controller="User" asp-action="Create">Sign Up</a>&nbsp; &nbsp;
-             <a asp-area="" asp-controller="Home" asp-action="Login">Sign In</a>
-            
+            &copy; 2022 - Document Management System -
+                <br />
+            <div style="margin-left: 58px;">
+            <button style="margin-left: 6px;" type="button" class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</button>&nbsp; &nbsp;
+             <button style="margin-left: 57px;"type="button" class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Support">Support</button>&nbsp; &nbsp;<br />
+             <button type="button" class="btn btn-dark" asp-area="" asp-controller="User" asp-action="Create">Sign Up</button>&nbsp; &nbsp;
+             <button style="margin-left: 53px;" type="button" class="btn btn-dark" asp-area="" asp-controller="Home" asp-action="Login">Sign In</button>
+            </div>
+        </div>
+        <div style="margin-left: 981px; margin-top: -220px;" class="gsc-column col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="column-inner bg-size-cover">
+                <div  class="column-context-allAdressBox">
+                    <h4>Global Delivery Centers- NOIDA</h4>
+                    <p style="line-height: 1.5em; margin-top: 40px; margin-left: 12px">
+                        "SDF E-22,"
+                        <br />
+                        "Noida SpecialEconomic Zone,"
+                        <br />
+                        "India"
+                        <br />
+                        "Tel: +91 120 256 8037"
+                        <br />
+                        "Fax: +91 120 256 8110."
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div style="margin-top: -255px; margin-left: 585px;">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="https://www.interrait.com/sites/default/files/logo_opt.png" />
+                </a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
