updated Home Page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿<html>
+
+
 <head>
    </head>
 @{
@@ -6,12 +8,13 @@
 }
 
 <body>
-   
+
+
 <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
-<div class="text-center">
+<div class="text-center ">
     <h1 class="display-4">Welcome to InterraIt</h1>
     <div style="margin-bottom: -80px; margin-top: -67px">
-    <p  align="center">Learn about <a href="https://docs.microsoft.com/aspnet/core"></a>InterraIT has been a leader in the Information Technology Industry since its founding in 1996. The company is a Global Software Services organization that delivers innovative business and technology solutions to Fortune 1000 companies. Accredited as ISO 9001:2015 certified organization; it has also been listed as one of India’s Top 20 Best Employers by IDC-DQ Best Employers Survey.
+    <p  class="p1" align="center">Learn about <a href="https://docs.microsoft.com/aspnet/core"></a>InterraIT has been a leader in the Information Technology Industry since its founding in 1996. The company is a Global Software Services organization that delivers innovative business and technology solutions to Fortune 1000 companies. Accredited as ISO 9001:2015 certified organization; it has also been listed as one of India’s Top 20 Best Employers by IDC-DQ Best Employers Survey.
     
 Headquartered in California, InterraIT’s operations are spread across 5 countries, with a sales network spanning the United States, Canada and India . The company has two state of the art development centers in India, which are the focal point in servicing its esteemed customer base across the globe.</p>
     </div>
@@ -20,7 +23,7 @@ Headquartered in California, InterraIT’s operations are spread across 5 countr
 
 
 </div>
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+<div style="margin-top: 25px;"id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -116,24 +119,18 @@ Headquartered in California, InterraIT’s operations are spread across 5 countr
 
 </div>
 <div class="text-center">
-    <h3 style="margin-top: 100px;">
-        THE ONE TREE,
-        <br />
-        ONE LIFE INITIATIVE
+    <h3 style="margin-top: 25px;">
+        The One Tree One Life Initiative
     </h3>
-        <p style="margin-top: 25px;">This initiative by InterraIT is to ensure environmental sustainability and reduce the amount of CO2 from the environment.</p>
+        <p class="p1"style="margin-top: 25px;">This initiative by InterraIT is to ensure environmental sustainability and reduce the amount of CO2 from the environment.</p>
     <h3 style="margin-top: -60px;">
-        PROMOTE FREE AND
-        <br />
-        QUALITY EDUCATION
+        Promote Free and Quality Education
     </h3>
-        <p style="margin-top: 25px;">In order to promote free and quality education to the underprivileged, InterraIT seeks to provide education to improve the standard of living and livelihood.</p>
+        <p class="p1"style="margin-top: 25px;">In order to promote free and quality education to the underprivileged, InterraIT seeks to provide education to improve the standard of living and livelihood.</p>
     <h3 style="margin-top: -60px;">
-        AN INITIATIVE FOR
-        <br />
-        BETTER ENVIRONMENT
+        An Initiative for Better Environment
     </h3>
-        <p style="margin-top: 25px;">An initiative by InterraIT to keep our environment clean and make it a better place to live in.</p>
+        <p class="p1"style="margin-top: 25px; margin-bottom: 72px;">An initiative by InterraIT to keep our environment clean and make it a better place to live in.</p>
 </div>
 
 <div>
@@ -143,5 +140,4 @@ Headquartered in California, InterraIT’s operations are spread across 5 countr
 <script src="~/js/Dashboard.js"></script>
     
 </body>
-
-
+</html>
