--- a/Views/User/Login.cshtml
+++ b/Views/User/Login.cshtml
@@ -67,14 +67,14 @@
   </div>
 </main>
 
-<footer class="relative z-10 flex-none text-sm text-center py-4 px-4 sm:px-6 lg:px-8">
+<div class="relative z-10 flex-none text-sm text-center py-4 px-4 sm:px-6 lg:px-8">
   <div class="text-gray-900 sm:flex sm:items-center sm:justify-center space-y-4 sm:space-y-0 sm:space-x-4">
   <p>Don't have an account?</p>
   <a href="#" class="rounded-md border border-gray-300 hover:border-gray-400 py-2 px-10 font-medium flex items-center justify-center">
     Get access
   </a>
 </div>
-</footer>
+</div>
       </div>
 
 </body>
