--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Document_Saver.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -182,17 +183,47 @@
                         Fax: +1 408 441 7495
                     </p>
                     </div>
+
                     <div class="branches">
                     <h4 >Branches:</h4>
                     <div class="d-flex branchA" >
-                        <p class="one"><i class="bi bi-geo-alt-fill"></i>Noida</p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp;
+                        @*<p class="one"><i class="bi bi-geo-alt-fill"></i>Noida</p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp;*@
+                        <p   data-bs-toggle="tooltip" data-bs-placement="top" title="Plot No. 129G/46-50 & 59-63
+Noida Special Economic Zone
+Noida, UP – 201305,
+India
+Tel: +91 120 256 8037
+Fax: +91 120 256 8110. "><i class="bi bi-geo-alt-fill"></i>
+                              Noida
+                            </p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp;
                         
-                        <p class="two"><i class="bi bi-geo-alt-fill"></i>Noida</p>
+                            <p   data-bs-toggle="tooltip" data-bs-placement="top" title="SDF E-22,
+Noida Special Economic Zone,
+Noida 201305, UP.
+India
+Tel: +91 120 256 8037
+Fax: +91 120 256 8110."><i class="bi bi-geo-alt-fill"></i>
+                                Noida
+                            </p> 
                     </div>
                     
                     <div class="d-flex" >
-                        <p class="two"><i class="bi bi-geo-alt-fill"></i>Kolkata</p>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp;
-                        <p class="two"><i class="bi bi-geo-alt-fill"></i>Canada</p>
+                            <p   data-bs-toggle="tooltip" data-bs-placement="top" title="223, SDF Building, Sector V,
+Block GP, Salt Lake,
+Kolkata– 700 091,
+India
+Tel: 033-44031100
+Fax: 033-23573847"><i class="bi bi-geo-alt-fill"></i>
+                                Kolkata
+                            </p> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp;
+                            <p   data-bs-toggle="tooltip" data-bs-placement="top" title="9225 Leslie Street
+Suite 201
+Richmond Hill
+Ontario, L4B 3H6
+Canada
+Tel: 289-695-5687"><i class="bi bi-geo-alt-fill"></i>
+                                Canada
+                            </p> 
                     </div>
                     </div>
                 
@@ -229,7 +260,8 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    
     
     @await RenderSectionAsync("Scripts", required: false)
