--- a/Views/ProjectDetails/Table.cshtml
+++ b/Views/ProjectDetails/Table.cshtml
@@ -122,11 +122,11 @@
                       
                 <td>
                     <div class=w-75 btn-group" role="group">
-                        <a asp-action="Edit" asp-controller="category" asp-route-Id="@obj.Project_Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
+                        <a asp-action="Edit" asp-controller="ProjectDetails" asp-route-Id="@obj.Project_Id" class="btn btn-primary mx-2"><i class="bi bi-pencil-square"></i></a>
 
                     </div>
                     <div class=w-75 btn-group" role="group">
-                        <a asp-action="Delete" asp-controller="category" asp-route-Id="@obj.Project_Id" class="btn btn-danger mx-2"><i class="bi bi-trash"></i></a>
+                        <a asp-action="Delete" asp-controller="ProjectDetails" asp-route-Id="@obj.Project_Id" class="btn btn-danger mx-2"><i class="bi bi-trash"></i></a>
 
                     </div>
                 </td>
