--- a/Views/ProjectDetails/Dashboard.cshtml
+++ b/Views/ProjectDetails/Dashboard.cshtml
@@ -52,7 +52,7 @@
                 <span>Projects</span></a>
             </li>
             <li class="nav-item">
-              <a href="#" class="d-flex align-items-center nav-link"><i class="fa fa-square-o" aria-hidden="true"></i>
+              <a asp-controller="Upload" asp-action="Index" class="d-flex align-items-center nav-link"><i class="fa fa-square-o" aria-hidden="true"></i>
                 <span>Documents</span></a>
             <li class="nav-item">
               <a href="#" class="d-flex align-items-center nav-link"><i class="fa fa-cog" aria-hidden="true"></i>
